Revert font size.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "plop": "plop",
     "setup": "node ./lib/setup.js",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_0e3b733d9ba77c2"
   },
   "dependencies": {
     "@contentful/live-preview": "^4.2.3",
@@ -37,8 +38,11 @@
     "@storybook/nextjs": "^8.1.10",
     "@storybook/react": "^8.1.10",
     "@storybook/test": "^8.1.10",
+    "chromatic": "^11.5.4",
     "plop": "^4.0.1",
     "sass": "^1.77.6",
     "storybook": "^8.1.10"
-  }
+  },
+  "name": "",
+  "version": ""
 }
