--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "plop": "plop",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_0e3b733d9ba77c2"
+    "chromatic": "npx chromatic"
   },
   "dependencies": {
     "@contentful/live-preview": "^4.2.3",
@@ -42,6 +42,6 @@
     "sass": "^1.77.6",
     "storybook": "^8.1.10"
   },
-  "name": "",
+  "name": "kevin-newcombe-site-24",
   "version": ""
 }
