--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "plop": "plop",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic"
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
     "@contentful/live-preview": "^4.2.3",
