--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
     "incremental": true,
+    "moduleResolution": "node16",
     "plugins": [
       {
         "name": "next"
