--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storyblok-rich-text-react-renderer": "^2.9.2",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
