--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "autoprefixer": "10.4.15",
     "contentful-import": "^9.0.4",
     "date-fns": "2.30.0",
+    "dotenv": "^16.4.5",
     "next": "latest",
     "postcss": "8.4.31",
+    "postmark": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storyblok-rich-text-react-renderer": "^2.9.2",
