--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "2.30.0",
     "dotenv": "^16.4.5",
     "next": "latest",
+    "next-recaptcha-v3": "^1.4.1",
     "postcss": "8.4.31",
     "postmark": "^4.0.4",
     "react": "^18.2.0",
