--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storyblok/react": "^3.0.10",
     "@storybook/addon-a11y": "^8.2.8",
     "@storybook/addon-storysource": "^8.2.8",
+    "@types/grecaptcha": "^3.0.9",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -33,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
+    "react-hot-toast": "^2.4.1",
     "storyblok-rich-text-react-renderer": "^2.9.2",
     "typescript": "^5.1.6"
   },
