--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          ignoreLastBuildOnBranch: "my-branch" # 👈 Option to ignore the last build on target branch
+          # ignoreLastBuildOnBranch: "main" # 👈 Option to ignore the last build on target branch
           # autoAcceptChanges: "main" # 👈 Option to accept all changes on main
 
