--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -29,5 +29,5 @@ jobs:
           # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           # ignoreLastBuildOnBranch: "main" # 👈 Option to ignore the last build on target branch
-          # autoAcceptChanges: "main" # 👈 Option to accept all changes on main
+          autoAcceptChanges: "main" # 👈 Option to accept all changes on main
 
