--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "build-storybook": "storybook build",
     "chromatic": "chromatic --exit-zero-on-changes",
     "proxy": "local-ssl-proxy --source 3010 --target 3000 --cert localhost.pem --key localhost-key.pem",
-    "blokprops": "source .env && storyblok login --token $STORYBLOK_OAUTH_TOKEN --region eu && storyblok pull-components --space $STORYBLOK_SPACE_ID --path .tmp/ && storyblok generate-typescript-typedefs --typeNamesSuffix Props --sourceFilePaths ./.tmp/components.$STORYBLOK_SPACE_ID.json --destinationFilePath lib/types/storyblok-component-types.d.ts && del ./.tmp/components.299841.json"
+    "blokprops": "source .env && storyblok login --token $STORYBLOK_OAUTH_TOKEN --region eu && storyblok pull-components --space $STORYBLOK_SPACE_ID --path .tmp/ && storyblok generate-typescript-typedefs --typeNamesSuffix Props --sourceFilePaths ./.tmp/components.$STORYBLOK_SPACE_ID.json --destinationFilePath lib/types/storyblok-component-types.d.ts && del ./.tmp/components.$STORYBLOK_SPACE_ID.json"
   },
   "dependencies": {
-    "@contentful/live-preview": "^4.2.3",
-    "@contentful/rich-text-react-renderer": "^15.17.1",
-    "@contentful/rich-text-types": "^16.2.1",
     "@storyblok/react": "^3.0.10",
     "@storybook/addon-a11y": "^8.2.8",
     "@storybook/addon-storysource": "^8.2.8",
@@ -23,7 +20,6 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.15",
-    "contentful-import": "^9.0.4",
     "cross-env": "^7.0.3",
     "date-fns": "2.30.0",
     "del-cli": "^5.1.0",
@@ -33,7 +29,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storyblok": "^3.32.3",
-    "storyblok-js-client": "^6.8.1",
     "storyblok-rich-text-react-renderer": "^2.9.2",
     "typescript": "^5.1.6"
   },
