--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "date-fns": "2.30.0",
     "del-cli": "^5.1.0",
     "dotenv": "^16.4.5",
-    "next": "latest",
+    "next": "^14.2.5",
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
