--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL="localhost:3000" # For any hardcoded links, like in meta tags 
 
 STORYBLOK_API_TOKEN="" # https://www.storyblok.com/faq/retrieve-and-generate-access-tokens
-STORYBLOK_PAGE_VERSION="draft" # This needs to match the permission level of the STORYBLOK_API_TOKEN 
+STORYBLOK_PAGE_VERSION="" # This needs to match the permission level of the STORYBLOK_API_TOKEN 
 STORYBLOK_SPACE_ID="" # https://www.storyblok.com/faq/where-can-i-find-my-space-id For local dev, this forms an "edit post" link
 STORYBLOK_OAUTH_TOKEN="" # https://github.com/storyblok/storyblok-cli for the CLI tool 
 
