Update readme and example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL="localhost:3000" # For any hardcoded links, like in meta tags 
+NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL="localhost:3000" # Domain for any hardcoded links, like in meta tags. Exclude the trailing slash or `https://` 
 
 STORYBLOK_API_TOKEN="" # https://www.storyblok.com/faq/retrieve-and-generate-access-tokens
 STORYBLOK_PAGE_VERSION="draft" # This needs to match the permission level of the STORYBLOK_API_TOKEN 
@@ -9,6 +9,6 @@ STORYBLOK_OAUTH_TOKEN="" # https://github.com/storyblok/storyblok-cli for the CL
 POSTMARK_SERVER_TOKEN="" # postark api token
 NEXT_PUBLIC_CAPTCHA_SITE_KEY="" #recaptcha publics key
 CAPTCHA_SECRET_KEY="" #recaptcha secret key
-CONTACT_FORM_EMAIL_ADDRESS="" # For the contact form.
+CONTACT_FORM_EMAIL_ADDRESS="" # Where contact form submissions get sent
 
 CHROMATIC_PROJECT_TOKEN="" # https://www.chromatic.com/docs/faq/find-project-token/
